--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [
     {
       "matches": ["https://www.netflix.com/*"],
-      "js": ["juris.js", "content.js", "twind.js"],
+      "js": ["content.js", "twind.js"],
       "run_at": "document_end"
     }
   ],
